# computer-architecture-lab4

./: .github:workflows:ci.yml  .gitignore  README.md  cat.alg  hello.alg  hello_user_name.alg  isa.py  machine.py  math64.alg  pyproject.toml  ruff.toml  solution.alg  sort.alg  translator.py
.github/workflows/: ci.yml
golden/: cat.yml  euler.yml  hello.yml  hello_user_name.yml  math64.yml  sort.yml
tests/: test_machine.py
