[tool.poetry]
name = "csa-lab-4"
version = "0.1.0"
description = "lab4"
authors = ["Горелова Ульяна"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
pytest-golden = "^0.2.2"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
pythonpath = "."